--- a/v-card.html
+++ b/v-card.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html>
     <head>
+         <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>V-Card:Abel Fortunati</title>
         <link href="V-Card.css" rel="style-sheet" type="text/css">
     </head>
     <body>
         <header>
+            <h1>ABEL FORTUNATI</h1>
         </header>
+
+        <section>
+         <article><input type="button" name="porfolio button" class="button"/></article>
+         <article><input type="button" name="porfolio button" class="button"/></article>
+        </section>
+
+        <section>
+         <article><p>abel.ruth@gmail.fr</p></article>
+         <article><p>0489/78.63.81b</p></article>
+        </section>
+        <section>
+            <h3>> Web Designer;</h3>
+            <h4>/*Front-End*/</h4>
+            <p><p>Bonjour, j'écris ceci car en vérité je fais du web! Le saviez-vous ? Abel, bientôt 30 ballais, whesh ma gueule. blablabla blablabla blablabla.</p></p>
+        </section>
         <footer>
+            <p>@ 1993-2050 ROLL-IT COMPAGNY</p>
         </footer>
     </body>
 </html>
