--- a/v-card.html
+++ b/v-card.html
@@ -5,28 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>V-Card:Abel Fortunati</title>
-        <link href="V-Card.css" rel="style-sheet" type="text/css">
+        <link rel="stylesheet" type="text/css" href="v-card.css"/>
     </head>
     <body>
-        <header>
-            <h1>ABEL FORTUNATI</h1>
-        </header>
-
+            <p class="header">ABEL FORTUNATI</p>
         <section>
-         <article><input type="button" name="porfolio button" class="button"/></article>
-         <article><input type="button" name="porfolio button" class="button"/></article>
+         <article><button onclick="window.location.href='https://www.pubavenue.com/produits/conferencier-personnalise-pas-cher-porte-folio-similicuir-impression-logo-publicitaire-prix-discount-1-3068';"><aside>> PORTFOLIO</aside></button></article>
+         <article><button onclick="window.location.href='https://www.gotquestions.org/Francais/resume-densemble-Bible.html';"><aside>> RESUME</aside></button></article>
         </section>
-
-        <section>
-         <article><p>abel.ruth@gmail.fr</p></article>
-         <article><p>0489/78.63.81b</p></article>
+        <section class="contact">
+         <article class="mail"><p>abel.ruth@gmail.fr</p></article>
+         <article class="number"><p>0489/78.63.81b</p></article>
         </section>
-        <section>
-            <h3>> Web Designer;</h3>
-            <h4>/*Front-End*/</h4>
-            <p><p>Bonjour, j'écris ceci car en vérité je fais du web! Le saviez-vous ? Abel, bientôt 30 ballais, whesh ma gueule. blablabla blablabla blablabla.</p></p>
+        <section class="description">
+            <article class="job"><p>> Web Designer;</p></article>
+           <article class="special"><p>/*Front-End*/</p></article>
+            <article><p class="whoami">p//Bonjour, j'écris ceci car en vérité je fais du web! Le saviez-vous ? Abel, bientôt 30 ballais, whesh ma gueule. blablabla blablabla blablabla.\\p</p></article>
         </section>
-        <footer>
+            <footer>
             <p>@ 1993-2050 ROLL-IT COMPAGNY</p>
         </footer>
     </body>
